--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div id="main-container" class="container-fluid">
+    <div id="main-container" class="container-fluid mt-2">
         <div class="row">
             <div class="col">
                 <canvas id="recaman">
@@ -26,7 +26,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container mt-2">
         <div class="row">
             <div class="col">
                 <form>                    
